docs: replace README.md with full review plan and findings
Includes baseline architecture, 6-group review plan, prioritized findings,
and arm64 macOS deployment requirements.

Co-authored-by: factory-droid[bot] <138933559+factory-droid[bot]@users.noreply.github.com>